--- a/public/style.css
+++ b/public/style.css
@@ -97,6 +97,17 @@ border: none;
 background-size: contain;
 background-repeat: no-repeat;
 }
+
+#returnHomeBtn{
+  background-image: url(chat-home.png);
+  width: 35px;
+  height: 35px;
+  border: none;
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: absolute;
+}
+
 #messages {
   flex-grow: 1;
   padding: 10px;
@@ -170,4 +181,8 @@ button {
     width: 100%;
   }}
 
-  
+  .message-time {
+    font-size: 12px;
+    color: gray;
+    margin-left: 10px;
+  }
